--- a/Bk_DataScience.ipynb
+++ b/Bk_DataScience.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoxBHUWbYMuLfxWCuGPXSd",
+      "authorship_tag": "ABX9TyO6jY0J6emro1UHdFkzrijz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Load Data"
+        "###Load Data"
       ],
       "metadata": {
         "id": "E1owZ35RIghF"
@@ -1375,7 +1375,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Validasi Data\n",
+        "## 3. Validasi Data\n",
         "Tahap ini bertujuan untuk memahami isi dataset agar dapat dilakukan penanganan sesuai dengan kondisinya"
       ],
       "metadata": {
